--- a/spamdetectionSMS.ipynb
+++ b/spamdetectionSMS.ipynb
@@ -2,12 +2,152 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as pd\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_excel(\"spam.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v1</th>\n",
+       "      <th>v2</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1229</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Jus ans me lar. U'll noe later.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4409</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>You also didnt get na hi hi hi hi hi</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1865</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Call to the number which is available in appoi...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1840</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Yeah. I got a list with only u and Joanna if I...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3306</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Set a place for me in your heart and not in yo...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       v1                                                 v2 Unnamed: 2   \n",
+       "1229  ham                    Jus ans me lar. U'll noe later.        NaN  \\\n",
+       "4409  ham               You also didnt get na hi hi hi hi hi        NaN   \n",
+       "1865  ham  Call to the number which is available in appoi...        NaN   \n",
+       "1840  ham  Yeah. I got a list with only u and Joanna if I...        NaN   \n",
+       "3306  ham  Set a place for me in your heart and not in yo...        NaN   \n",
+       "\n",
+       "     Unnamed: 3 Unnamed: 4  \n",
+       "1229        NaN        NaN  \n",
+       "4409        NaN        NaN  \n",
+       "1865        NaN        NaN  \n",
+       "1840        NaN        NaN  \n",
+       "3306        NaN        NaN  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5572 entries, 0 to 5571\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   v1          5572 non-null   object\n",
+      " 1   v2          5572 non-null   object\n",
+      " 2   Unnamed: 2  50 non-null     object\n",
+      " 3   Unnamed: 3  12 non-null     object\n",
+      " 4   Unnamed: 4  6 non-null      object\n",
+      "dtypes: object(5)\n",
+      "memory usage: 217.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
@@ -25,7 +165,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.11"
   },
   "orig_nbformat": 4
