--- a/spamdetectionSMS.ipynb
+++ b/spamdetectionSMS.ipynb
@@ -12,119 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_excel(\"spam.xlsx\")"
+    "df=pd.read_excel(\"spam.xls\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>v1</th>\n",
-       "      <th>v2</th>\n",
-       "      <th>Unnamed: 2</th>\n",
-       "      <th>Unnamed: 3</th>\n",
-       "      <th>Unnamed: 4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1229</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Jus ans me lar. U'll noe later.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4409</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>You also didnt get na hi hi hi hi hi</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1865</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Call to the number which is available in appoi...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1840</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Yeah. I got a list with only u and Joanna if I...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3306</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Set a place for me in your heart and not in yo...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       v1                                                 v2 Unnamed: 2   \n",
-       "1229  ham                    Jus ans me lar. U'll noe later.        NaN  \\\n",
-       "4409  ham               You also didnt get na hi hi hi hi hi        NaN   \n",
-       "1865  ham  Call to the number which is available in appoi...        NaN   \n",
-       "1840  ham  Yeah. I got a list with only u and Joanna if I...        NaN   \n",
-       "3306  ham  Set a place for me in your heart and not in yo...        NaN   \n",
-       "\n",
-       "     Unnamed: 3 Unnamed: 4  \n",
-       "1229        NaN        NaN  \n",
-       "4409        NaN        NaN  \n",
-       "1865        NaN        NaN  \n",
-       "1840        NaN        NaN  \n",
-       "3306        NaN        NaN  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
